@@ -23,7 +23,7 @@ $tempColumns = array(
 		'config' => array(
 			'type' => 'group',
 			'internal_type' => 'db',
-			'allowed' => '',
+			'allowed' => (isset($TCA['tt_content']['columns']['tx_displaycontroller_consumer']['config']['allowed'])) ? $TCA['tt_content']['columns']['tx_displaycontroller_consumer']['config']['allowed'] : '',
 			'size' => 1,
 			'minitems' => 1,
 			'maxitems' => 1,
@@ -54,7 +54,7 @@ $tempColumns = array(
 		'config' => array (
 			'type' => 'group',
 			'internal_type' => 'db',
-			'allowed' => '',
+			'allowed' => (isset($TCA['tt_content']['columns']['tx_displaycontroller_provider']['config']['allowed'])) ? $TCA['tt_content']['columns']['tx_displaycontroller_provider']['config']['allowed'] : '',
 			'size' => 1,
 			'minitems' => 1,
 			'maxitems' => 1,
@@ -98,7 +98,7 @@ $tempColumns = array(
 		'config' => array (
 			'type' => 'group',	
 			'internal_type' => 'db',	
-			'allowed' => '',	
+			'allowed' => (isset($TCA['tt_content']['columns']['tx_displaycontroller_datafilter']['config']['allowed'])) ? $TCA['tt_content']['columns']['tx_displaycontroller_datafilter']['config']['allowed'] : '',	
 			'size' => 1,	
 			'minitems' => 0,
 			'maxitems' => 1,
@@ -140,7 +140,7 @@ $tempColumns = array(
 		'config' => array (
 			'type' => 'group',
 			'internal_type' => 'db',
-			'allowed' => '',
+			'allowed' => (isset($TCA['tt_content']['columns']['tx_displaycontroller_provider2']['config']['allowed'])) ? $TCA['tt_content']['columns']['tx_displaycontroller_provider2']['config']['allowed'] : '',
 			'size' => 1,
 			'minitems' => 0,
 			'maxitems' => 1,
@@ -182,7 +182,7 @@ $tempColumns = array(
 		'config' => array (
 			'type' => 'group',
 			'internal_type' => 'db',
-			'allowed' => '',
+			'allowed' => (isset($TCA['tt_content']['columns']['tx_displaycontroller_datafilter2']['config']['allowed'])) ? $TCA['tt_content']['columns']['tx_displaycontroller_datafilter2']['config']['allowed'] : '',
 			'size' => 1,
 			'minitems' => 0,
 			'maxitems' => 1,
