@@ -1,3 +1,7 @@
+2011-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Removed dependency on extensions load order for allowed property, resolves #13929
+
 2010-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released to TER as version 1.0.1
